--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "raspi-weathermap",
-  "version": "0.0.0",
+  "author": {
+    "name": "Sebastian"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "node-fetch": "^2.2.0"
+  },
   "description": "WeatherMap",
-  "main": "app.js",
   "keywords": [
     "openweathermap",
     "raspberry",
@@ -13,18 +17,14 @@
     "ws281x"
   ],
   "license": "MIT",
-  "author": {
-    "name": "Sebastian"
-  },
-  "dependencies": {
-    "chalk": "^2.4.1",
-    "node-fetch": "^2.2.0"
-  },
+  "main": "app.js",
+  "name": "raspi-weathermap",
   "optionalDependencies": {
     "rpi-ws281x-native": "latest"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/SebastianSpeitel/WeatherMap.git"
-  }
+  },
+  "version": "0.0.1"
 }
